[metadata] 
name = rowan_ds_tools_2
author= Rowan Mankoo
author_email = rowan.mankoo@gmail.com
description = Package of tools for OMD employees to use
long_description = file: README.md
version = 0.1
url=https://github.com/RowanMankoo/rowan_ds_tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
install_requires =
    numpy==1.23.3
    pandas==1.4.3
    protobuf==4.21.7
    pytest==6.2.4
    scipy==1.9.2
    SQLAlchemy==1.4.22
    google-cloud==0.34.0
    google-cloud-storage==2.5.0
    psycopg2-binary==2.9.4
packages = find:

